cambios en sidebar terminados

--- a/index.html
+++ b/index.html
@@ -943,9 +943,122 @@
 						</li>
 					</ul>
 				</div>
+				<div>
+					<p class="small">Hace 1 hora 12 mins</p>
+					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
+					<img class="floatLeft" src="image/img_news.jpg" alt="">
+					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
+					<ul class="list-inline floatLeft bottomList center">
+						<li>
+							<a href=""><i class="fa fa-facebook"></i></a>
+							<a href=""><i class="fa fa-twitter"></i></a>
+							<a href=""><i class="fa fa-google-plus"></i></a>
+							<i class="fa fa-circle"></i>
+						</li>
+						<li>
+							<p><i class="glyphicon glyphicon-comment"></i> 10 <i class="fa fa-circle"></i></p>
+						</li>
+						<li>
+							<p>Espectáculos<i class="fa fa-circle"></i></p>
+						</li>
+						<li>
+							<i class="fa fa-camera"></i>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<p class="small">Hace 1 hora 12 mins</p>
+					<h4>Roque Benavides respalda proyecto Tía María y espera que Conga se socialice</h4>
+					<img class="floatLeft" src="image/Roque.JPG" alt="">
+					<p>Zenaida Condori Contreras - Arequipa. <br>
+						Para el presidente de la Compañía de Minas Buenaventura, Roque Benavides, el proyecto Tía María, que promueve Southern Perú, ya debe...</p>
+					<ul class="list-inline floatLeft bottomList center">
+						<li>
+							<a href=""><i class="fa fa-facebook"></i></a>
+							<a href=""><i class="fa fa-twitter"></i></a>
+							<a href=""><i class="fa fa-google-plus"></i></a>
+							<i class="fa fa-circle"></i>
+						</li>
+						<li>
+							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
+						</li>
+						<li>
+							<p>Arequipa</p>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<p class="small">Hace 1 hora 12 mins</p>
+					<h4>YouTube: hombre finge ahogarse y su perro lo rescata | VIDEO</h4>
+					<img class="floatLeft" src="image/perro.JPG" alt="">
+					<p>Perrito de lomo suavecito -no super gordito, pero sí super en forma- se lanza de inmediato al agua a rescatar a su dueño que pretendía estar ahogándose.</p>
+					<ul class="list-inline floatLeft bottomList center">
+						<li>
+							<a href=""><i class="fa fa-facebook"></i></a>
+							<a href=""><i class="fa fa-twitter"></i></a>
+							<a href=""><i class="fa fa-google-plus"></i></a>
+							<i class="fa fa-circle"></i>
+						</li>
+						<li>
+							<p><i class="glyphicon glyphicon-comment"></i> 10 <i class="fa fa-circle"></i></p>
+						</li>
+						<li>
+							<p>Espectáculos<i class="fa fa-circle"></i></p>
+						</li>
+						<li>
+							<i class="fa fa-youtube-play"></i>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<p class="small">Hace 1 hora 12 mins</p>
+					<h4>Real Madrid: Cristiano Ronaldo fue sancionado con dos partidos y sí jugará contra el Atlético de Madrid</h4>
+					<img class="floatLeft" src="image/real-madrid.JPG" alt="">
+					<p>Después de la pésima actitud de Cristiano Ronaldo, al agredir a Edimar en el partido del cuadro madridista contra el Córdoba, el Comité de Competición ha llegado a la....</p>
+					<ul class="list-inline floatLeft bottomList center">
+						<li>
+							<a href=""><i class="fa fa-facebook"></i></a>
+							<a href=""><i class="fa fa-twitter"></i></a>
+							<a href=""><i class="fa fa-google-plus"></i></a>
+							<i class="fa fa-circle"></i>
+						</li>
+						<li>
+							<p><i class="glyphicon glyphicon-comment"></i> 0 <i class="fa fa-circle"></i></p>
+						</li>
+						<li>
+							<p>Fútbol<i class="fa fa-circle"></i></p>
+						</li>
+					</ul>
+				</div>
+				<div>
+					<p class="small">Hace 1 hora 12 mins</p>
+					<h4>Emma Watson protagonizará 'La bella y la bestia' | FOTOS</h4>
+					<img class="floatLeft" src="image/img_news.jpg" alt="">
+					<p>La actriz Emma Watson fue confirmada por Disney como la protagonista de 'La bella y la bestia' en la versión de carne y hueso.</p>
+					<ul class="list-inline floatLeft bottomList center">
+						<li>
+							<a href=""><i class="fa fa-facebook"></i></a>
+							<a href=""><i class="fa fa-twitter"></i></a>
+							<a href=""><i class="fa fa-google-plus"></i></a>
+							<i class="fa fa-circle"></i>
+						</li>
+						<li>
+							<p><i class="glyphicon glyphicon-comment"></i> 10 <i class="fa fa-circle"></i></p>
+						</li>
+						<li>
+							<p>Espectáculos<i class="fa fa-circle"></i></p>
+						</li>
+						<li>
+							<i class="fa fa-camera"></i>
+						</li>
+					</ul>
+				</div>
+
 		<!--Contenido infinito-->
 			</div>
+		
 			<div class="col-lg-4">
+			<!-- MAIL -->
 				<div class="suscribe bg-sidebar">
 					<div class="bg-white">
 						<img class="mail" src="image/img_sucribe.png" >
@@ -954,8 +1067,10 @@
 					 	<button class="btn-suscribe" type="submit">Suscribirse</button>
 					</div>
 				</div>
-				<div class="aweita">
-					<img class="img-sidebar logoaweita" src="image/logo_aweita.jpg">
+			<!-- MAIL -->
+			<!-- AWEITA -->
+				<div class="suplementos">
+					<img class="img-sidebar logosuplementos" src="image/logo_aweita.jpg">
 					<div class="noticia">
 						<img class="pull-left img-sidebar" src="image/img_aweita.jpg">
 					 	<p><b>Juan Roman Riquelme, el adios al "ultimo 10" de Argentina</b></p>
@@ -973,8 +1088,9 @@
 					 	<p><b>Lewis Carroll: un día como hoy nació el autor de "Alicia en el</b></p>
 					</div>
 					<h5 class="center">Más en <a class="link-aweita" href="http://www.aweita.pe">Awita.pe</a></h5>
-					<hr class="barra">
 				</div>
+			<!-- AWEITA -->
+			<!-- FOTOS DESTACADAS -->
 				<div class="fotos-dest">
 					<div class="foto-big">
 						<div class="titlephots">FOTOS DESTACADAS</div>
@@ -994,123 +1110,237 @@
 						</div>
 					</div>
 				</div>
+			<!-- FOTOS DESTACADAS -->
+			<!-- ESPECIALES -->
 				<div class="fotos-dest">
 					<div class="foto-big">
 						<div class="titlephots">ESPECIALES</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
-						 	<div class="bg_white"><h4>Régimen laboral juvenil</h4></div>
+							<img class="img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<h4 class="bg_white">Régimen laboral juvenil</h4>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
-						 	<div class="bg_white"><h4>COP20</h4></div>
+							<img class="img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<h4 class="bg_white">COP20</h4>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
-						 	<div class="bg_white"><h4>Concentración de Medios</h4></div>
+							<img class="img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<h4 class="bg_white">Concentración de Medios</h4>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
-						 	<div class="bg_white"><h4>Especies peruanas en peligro de extinción</h4></div>
+							<img class="img-sidebar photo" src="image/img_especiales_aside.jpg">
+						 	<h4 class="bg_white">Especies peruanas en peligro de extinción</h4>
 						</div>
 					</div>
 				</div>
+			<!-- ESPECIALES -->
+			<!-- CARLINCATURA -->
 				<div class="fotos-dest-red">
 					<div class="foto-big">
-						<div class="titlephots">CARLINCATURA DEL DÍA</div>
+						<div class="titlered">CARLINCATURA DEL DÍA</div>
 						<div class="noticia">
-							<h4>Carlincaturas 30-01-2015</h4>
-							<img class="pull-left img-sidebar photo" src="image/img_carlincatura_sd.jpg">
-						 	<h4>Todas las Carlincaturas</h4>
+							<h4 class="center"><b>Carlincaturas 30-01-2015</b></h4>
+							<img class="img-sidebar photo" src="image/img_carlincatura_sd.jpg">
+						 	<a class="linkred" href="#">Todas las Carlincaturas</a>
 						</div>
 					</div>
 				</div>
+			<!-- CARLINCATURA -->
+			<!-- BLOG -->
 				<div class="fotos-dest">
 					<div class="foto-big">
 						<div class="titlephots">BLOG</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<img class="pull-left img-sidebar photo" src="image/img_blogueros.jpg">
 							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
 						 	<p><b>Charlie Hebdo, historia que no debe repetirse</b></p>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<img class="pull-left img-sidebar photo" src="image/img_blogueros.jpg">
 							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
 						 	<p><b>El único pulpin es Humala</b></p>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<img class="pull-left img-sidebar photo" src="image/img_blogueros.jpg">
 							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
 						 	<p><b>Dios ha muerto... tengo las manos</b></p>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<img class="pull-left img-sidebar photo" src="image/img_blogueros.jpg">
 							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
 						 	<p><b>El único pulpin es Humala</b></p>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<img class="pull-left img-sidebar photo" src="image/img_blogueros.jpg">
 							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
 						 	<p><b>Charlie Hebdo, historia que no debe repetirse</b></p>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<img class="pull-left img-sidebar photo" src="image/img_blogueros.jpg">
 							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
 						 	<p><b>El único pulpin es Humala</b></p>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<img class="pull-left img-sidebar photo" src="image/img_blogueros.jpg">
 							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
 						 	<p><b>Dios ha muerto... tengo las manos</b></p>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="img_blogueros.jpg">
+							<img class="pull-left img-sidebar photo" src="image/img_blogueros.jpg">
 							<p><u>Augusto Álvarez Rodrich</u>Augusto Álvarez Rodrich</p>
 						 	<p><b>El único pulpin es Humala</b></p>
 						</div>
-						<a href="blog.html"><h4>Todos los Blogs</h4></a>
+						<a class="linkred" href="blog.html"><h4>Todos los Blogs</h4></a>
 					</div>
 				</div>
+			<!-- BLOG -->
+			<!-- EDICION IMPRESA -->
 				<div class="fotos-dest-red">
 					<div class="foto-big">
-						<div class="titlephots">EDICIÓN IMPRESA</div>
-						<h4>La republica - Lima</h4>
-						<img class="pull-left img-sidebar photo" src="image/img_impreso_sd_prominent.jpg">
-						<div class="noticia">
+						<div class="titlered">EDICIÓN IMPRESA</div>
+						<h4 class="center mt-5"><b>La republica - Lima</b></h4>
+						<img class="img-sidebar photo" src="image/img_impreso_sd_prominent.jpg">
+						<div class="edicion noticia">
 							<img class="pull-left img-sidebar photo" src="image/img_impreso_sd.jpg">
-						 	<div class="bg_white">
-						 		<h4>Extorsionan a menores en colegios</h4>
-						 		<a href="#"><u>La Républica - Norte</u></a>
-						 	</div>
+							<h4>Extorsionan a menores en colegios</h4>
+						 	<a class="linkred" href="#"><u>La Républica - Norte</u></a>
 						</div>
-						<div class="noticia">
+						<div class="edicion noticia">
 							<img class="pull-left img-sidebar photo" src="image/img_impreso_sd.jpg">
-						 	<div class="bg_white">
-						 		<h4>El Ojo de Oblitas</h4>
-						 		<a href="#"><u>Domingo</u></a>
-						 	</div>
+							<h4>Lluvias en Arequipa inundan casas y causan caos en las calles</h4>
+						 	<a class="linkred" href="#"><u>La Républica - Sur</u></a>
+						</div>
+						<div class="edicion noticia">
+							<img class="pull-left img-sidebar photo" src="image/img_impreso_sd.jpg">
+							<h4>El Ojo de Oblitas</h4>
+						 	<a class="linkred" href="#"><u>Domingo</u></a>
 						</div>
 					</div>
 				</div>
+			<!-- EDICION IMPRESA -->
+			<!-- Infografia -->
 				<div class="fotos-dest">
 					<div class="foto-big">
-						<div class="titlephots">ESPECIALES</div>
+						<div class="titlephots">Infografía</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
+							<img class="img-sidebar photo" src="image/img_especiales_aside.jpg">
 						 	<div class="bg_white"><h4>Histórico cierre de Frontera</h4></div>
 						</div>
 						<div class="noticia">
-							<img class="pull-left img-sidebar photo" src="image/img_especiales_aside.jpg">
+							<img class="img-sidebar photo" src="image/img_especiales_aside.jpg">
 						 	<div class="bg_white"><h4>Evolución de la pobreza e indigencia en América Latina</h4></div>
 						</div>
 					</div>
 				</div>
-				<div class="suscribe bg-sidebar">
-					<div class="bg-white">
-						<img class="mail" src="image/img_pregunta.png" >
+			<!-- Infografia -->
+			<!-- ENCUESTA -->
+				<div class="bg-encuesta">
+					<div class="bg-white-pregunta">
+						<img class="mail" src="image/img_pregunta.png">
 					 	<h3><b>La pregunta de hoy</b></h3>
-					 	<input class="enter-mail" type="text">
-					 	<button class="btn-suscribe" type="submit">Suscribirse</button>
+					 	<p class="center">¿Cree usted que la premier Ana Jara debe renunciar?</p>
+					 	<form class="col-md-12">
+							<div class="checkbox" id="contact">
+							    <input type="radio"value="1" id="contact-1-1" name="check"> <label for="option">Sí</label>
+							    <input type="radio"value="2" id="contact-1-2" name="check"><label for="option">No</label>
+							</div>
+							<button class="btn-suscribe" type="submit">Enviar</button>
+							<a href="#" class="linkred">Ver Resultados</a>
+						</form>
+					</div>
+					<div class="bg-white-encuesta">
+						<div>
+							<h5><b>La pregunta de ayer</b></h5>
+					 		<p class="center">¿Cree usted que se militarizó la conmemoración del fallo de La Haya en Lima?</p>
+						</div>
+						<div class="progress">
+  							<div class="progress-bar green-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 55%;"> 55%
+  							</div>
+						</div>						
+						<div class="progress">
+  							<div class="progress-bar red-bar" role="progressbar" aria-valuenow="2" aria-valuemin="0" aria-valuemax="100" style="min-width: 2em; width: 25%;"> 25%
+		  					</div>
+						</div>
+						<h4><a href="#" class="linkred">Ver preguntas pasadas</a></h4>
+					</div>
+				</div>
+			<!-- ENCUESTA -->
+			<!-- LIBERO.PE -->
+				<div class="suplementos">
+					<img class="img-sidebar logosuplementos" src="image/logo_libero.jpg">
+					<div class="noticia">
+						<img class="pull-left img-sidebar" src="image/libero1.png">
+					 	<p><b>Fiorentina empato 1-1 en su visita al Genoa con gran actuación de Juan Vargas [VIDEO]</b></p>
+					</div>
+					<div class="noticia">
+					 	<img class="pull-left img-sidebar" src="image/libero2.png">
+					 	<p><b>Jefferson Farfán Schalke 04 tampoco sabe cuándo volverá a las canchas [FOTOS]</b></p>
+					</div>
+					<div class="noticia">
+						<img class="pull-left img-sidebar" src="image/libero3.png">
+					 	<p><b>Villarreal: culés ganaron 3-2 con goles de Lionel Messi y Neymar por Liga BBVA [VIDEO]</b></p>
+					</div>
+					<div class="noticia">
+					 	<img class="pull-left img-sidebar" src="image/libero4.png" height="82" width="108">
+					 	<p><b>Perú cayó 3-1 ante Colombia por el hexagonal final del sudamericano Sub 20 [VIDEO/FOTOS]</b></p>
+					</div>
+					<h5 class="center">Más en <a class="link-aweita" href="http://www.libero.pe">Libero.pe</a></h5>
+				</div>
+			<!-- LIBERO.PE -->
+			<!-- ElPopular -->
+				<div class="suplementos">
+					<img class="img-sidebar logosuplementos" src="image/logo_popular.jpg">
+					<div class="popular noticia">
+						<img class="pull-left img-sidebar" src="image/popular1.png">
+					 	<p><b>Joshua Ivanoff está loco por el olor de Melissa Loza</b></p>
+					</div>
+					<div class="popular noticia">
+					 	<img class="pull-left img-sidebar" src="image/popular2.png">
+					 	<p><b>Corinthians: Paolo Guerrero dedica su gol a Alondra García</b></p>
+					</div>
+					<div class="popular noticia">
+						<img class="pull-left img-sidebar" src="image/popular3.png">
+					 	<p><b>Angie Arizaga es amenazada de muerte (VIDEO)</b></p>
+					</div>
+					<div class="popular noticia">
+					 	<img class="pull-left img-sidebar" src="image/popular4.png" height="82" width="108">
+					 	<p><b>Philip Seymour Hoffman: Un año sin el premiado actor (VIDEO)</b></p>
+					</div>
+					<h5 class="center">Más en <a class="link-aweita" href="http://www.libero.pe">ElPopular.pe</a></h5>
+				</div>
+			<!-- ElPopular -->
+			<!-- Wapa -->
+				<div class="suplementos">
+					<img class="img-sidebar logosuplementos" src="image/logo_wapa.jpg">
+					<div class="noticia">
+						<img class="pull-left img-sidebar" src="image/wapa1.png">
+					 	<p><b>¿Comó renovar el guardarropa de los más pequeños en este verano?</b></p>
+					</div>
+					<div class="noticia">
+					 	<img class="pull-left img-sidebar" src="image/wapa2.png">
+					 	<p><b>Shakira y Piqué ¡Ya son padres por segunda vez!</b></p>
+					</div>
+					<div class="noticia">
+						<img class="pull-left img-sidebar" src="image/wapa3.png">
+					 	<p><b>Ted 2: Mira el tráiler de la cinta</b></p>
+					</div>
+					<div class="noticia">
+					 	<img class="pull-left img-sidebar" src="image/wapa4.png" height="82" width="108">
+					 	<p><b>Cómo usar zapatos altos sin dolor</b></p>
+					</div>
+					<h5 class="center">Más en <a class="link-aweita" href="http://www.wapa.pe">wapa.pe</a></h5>
+				</div>
+			<!-- wapa -->
+			<!-- Reportero ciudadano -->
+			<div class="suscribe bg-photo">
+					<div class="bg-white">
+						<img class="mail" src="image/img_reporteroc.png">
+					 	<h3><b>Reportero ciudadano</b></h3>
+					 	<img src="image/img_sd_reporteroc.jpg" class="report">
+					 	<h5><b>Estacionamiento indebido</b></h5>
+					 	<p>¿Está permitido que dejen su auto en reiteradas ocasiones toda la noche en la puerta de tu casa? Placa DG6232, eso que antes lo dejaba entre la vereda y mi puerta.</p>
+					 	<button class="btn-suscribe" type="submit">ENVIAR FOTOS</button>
+					 	<a href="#" class="linkred">Más fotos</a>
 					</div>
 				</div>
 			</div>
@@ -1276,6 +1506,14 @@
 			arrows:false
 		});
 	</script>
-	
+	<script>
+		$(document).ready(function() {
+		    $('input[type=radio]').live('click', function(){
+		        var parent = $(this).parent().attr('id');
+		        $('#'+parent+' input[type=radio]').removeAttr('checked');
+		        $(this).attr('checked', 'checked');
+		    });
+		});
+	</script>
 </body>
 </html>
