--- a/blog.html
+++ b/blog.html
@@ -34,6 +34,10 @@
 							<i class="fa fa-google-plus"></i>
 							<i class="fa fa-envelope"></i>
 							<i class="fa fa-rss"></i>
+							<div>
+								<input type="text" placeholder="BUSCAR">
+								<a href=""><i class="fa fa-search"></i></a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -41,7 +45,9 @@
 			<section class="header">
 				<div class="row">
 					<div class="col-lg-4 col-lg-offset-2">
-						<img class="logo" src="image/logo-la-republica.jpg" alt="">
+						<a href="index.html">
+							<img class="logo" src="image/logo-la-republica.jpg" alt="">
+						</a>
 					</div>
 					<div class="col-lg-6 col-lg-offset-2">
 						<img class="floatRight" src="image/sideLogo.JPG" alt="">
@@ -83,7 +89,30 @@
 					<img src="image/sponsor_left.jpg">
 				</div>
 			<!--PUBLICIDAD PARA CAMBIAR DESPUES -->
-				<div class="col-md-12 mt-3">
+				<div class="col-md-12">
+					<div class="temas">
+						<p class="floatLeft">TEMAS DEL DÍA</p>
+						<ul class="multiple-items floatLeft">
+							<li><i class="fa fa-circle"></i><a href="">Globos de oro</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Youtube</a></li>
+							<li><i class="fa fa-circle"></i><a href="">PNP</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Charlie Hebdo</a></li>
+							<li><i class="fa fa-circle"></i><a href="">FC Barcelona</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Alianza Lima</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Balón de Oro</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Alianza Lima</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Municipal</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Tumblr</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Yahoo!</a></li>
+							<li><i class="fa fa-circle"></i><a href="">Google</a></li>
+						</ul>
+					</div>
+					<div class="row">
+						<div class="col-lg-16">
+							<img src="image/banner-header.jpg" alt="banner">
+						</div>
+					</div>
+					<br>
 					<div class="titulos">
 						<h1 class="title">Blog</h1>
 						<h4 class="subtitle">LO MEJOR EN BLOGS <img class="image-blog" src="image/double-arrow-bottom.png"></h4>
@@ -280,7 +309,7 @@
 				</div>
 			<!--PUBLICIDAD PARA CAMBIAR DESPUES -->
 				<div class="publicidad pull-right col-md-2">
-					<img src="image/sponsor_right.jpg">
+					<img src="image/sideAd.jpg">
 				</div>
 			<!--PUBLICIDAD PARA CAMBIAR DESPUES -->
 			</div>
@@ -431,7 +460,8 @@
 			infinite: true,
 			slidesToShow: 9,
 			slidesToScroll: 1,
-			variableWidth:true
+			variableWidth:true,
+			centerMode:true
 		});
 	</script>
 	<script type="text/javascript">
