--- a/columnistas.html
+++ b/columnistas.html
@@ -35,7 +35,7 @@
 						<i class="fa fa-rss"></i>
 						<div>
 							<input type="text" placeholder="BUSCAR">
-							<i class="fa fa-search"></i>
+							<a href=""><i class="fa fa-search"></i></a>
 						</div>
 					</div>
 				</div>
@@ -44,7 +44,9 @@
 		<section class="header">
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-2">
-					<img class="logo" src="image/logo-la-republica.jpg" alt="">
+					<a href="index.html">
+						<img class="logo" src="image/logo-la-republica.jpg" alt="">
+					</a>
 				</div>
 				<div class="col-lg-6 col-lg-offset-2">
 					<img class="floatRight" src="image/sideLogo.JPG" alt="">
@@ -64,14 +66,14 @@
 						<li><a href="">ESPECTÁCULOS</a></li>
 						<li><a href="">ED. IMPRESA</a></li>
 						<li><a href="">REGIONALES</a></li>
-						<li class="dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><a href="">MÁS SECCIONES <span class="caret"></span></a></li>
-						<ul class="dropdown-menu">
-							<li><a href="#">Action</a></li>
-							<li><a href="#">Another action</a></li>
-							<li><a href="#">Something else here</a></li>
-							<li role="separator" class="divider"></li>
-							<li><a href="#">Separated link</a></li>
-						</ul>	
+						<li class="dropdown"> 
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">MÁS SECCIONES<span class="caret"></span></a> 
+							<ul class="dropdown-menu"> 
+								<li><a href="columnistas.html">Columnistas</a></li>
+								<li><a href="blog.html">Blog</a></li>
+								<li><a href="contacto.html">Contacto</a></li> 
+							</ul> 
+						</li>
 					</ul>
 				</div>
 			</div>
@@ -108,7 +110,7 @@
 				<div class="row">
 					<div class="col-lg-16 contentWide">
 						<h1>Columnistas</h1>
-						<h4 class="floatLeft">LO ÚLTIMO EN COLUMNISTAS</h4>
+						<h4 class="floatLeft subtitle">LO ÚLTIMO EN COLUMNISTAS</h4>
 						<img class="floatLeft" src="image/double-arrow-bottom.png" alt="">
 					</div>
 				</div>
@@ -249,7 +251,7 @@
 					<div class="col-lg-16">
 						<br>
 						<br>
-						<h4 class="floatLeft">TODOS LOS COLUMNISTAS</h4>
+						<h4 class="floatLeft subtitle">TODOS LOS COLUMNISTAS</h4>
 						<img class="floatLeft" src="image/double-arrow-bottom.png" alt="">
 						<br>
 						<div class="center">
@@ -705,10 +707,146 @@
 			</div>
 		</div>
 	</section>
+		<footer>
+		<div class="container-fluid bg-gray">
+			<div class="container">
+				<div class="row">
+					<div class="col-md-4 logo-footer">
+						<img src="image/logo-grupo-la-republica.png">
+						<h4 class="txblack">Grupo La República Digital</h4>
+						<p>Jr.Canamá 320 Cercado de Lima</p>
+						<p>Teléfono:711-6000</p>
+						<p>(Central Telefónica)</p>
+						<p class="derechos">Todos los derechos reservados - 2015</p>
+					</div>
+					<div class="col-md-3 sep-footer lista-footer">
+						<ul>
+							<li>Roger Federer</li>
+							<li>The Walking Dead</li>
+							<li>Twitter</li>
+							<li>Alianza Lima</li>
+							<li>Bayern Múnich</li>
+							<li>Pablo Escobar</li>
+							<li>Barack Obama</li>
+							<li>BBVA</li>
+							<li>XBOX</li>
+							<li>Batman</li>
+							<li>Banco de la Nación</li>
+							<li>Universidad Cesar</li>
+							<li>Universidad San Martín</li>
+							<li>BCP</li>
+							<li>Alejandro Toledo</li>
+							<li>Spiderman</li>
+							<li>YouTube</li>
+							<li>Sunat</li>
+							<li>Al fondo hay sitio</li>
+							<li>Precio del dólar</li>
+							<li>Pensión 65</li>
+						</ul>
+					</div>
+					<div class="col-md-3 lista-footer">
+						<ul>
+							<li>Roger Federer</li>
+							<li>The Walking Dead</li>
+							<li>Twitter</li>
+							<li>Alianza Lima</li>
+							<li>Bayern Múnich</li>
+							<li>Pablo Escobar</li>
+							<li>Barack Obama</li>
+							<li>BBVA</li>
+							<li>XBOX</li>
+							<li>Batman</li>
+							<li>Banco de la Nación</li>
+							<li>Universidad Cesar</li>
+							<li>Universidad San Martín</li>
+							<li>BCP</li>
+							<li>Alejandro Toledo</li>
+							<li>Spiderman</li>
+							<li>YouTube</li>
+							<li>Sunat</li>
+							<li>Al fondo hay sitio</li>
+							<li>Precio del dólar</li>
+							<li>Pensión 65</li>
+						</ul>
+					</div>
+					<div class="col-md-3 lista-footer">
+						<ul>
+							<li>Roger Federer</li>
+							<li>The Walking Dead</li>
+							<li>Twitter</li>
+							<li>Alianza Lima</li>
+							<li>Bayern Múnich</li>
+							<li>Pablo Escobar</li>
+							<li>Barack Obama</li>
+							<li>BBVA</li>
+							<li>XBOX</li>
+							<li>Batman</li>
+							<li>Banco de la Nación</li>
+							<li>Universidad Cesar</li>
+							<li>Universidad San Martín</li>
+							<li>BCP</li>
+							<li>Alejandro Toledo</li>
+							<li>Spiderman</li>
+							<li>YouTube</li>
+							<li>Sunat</li>
+							<li>Al fondo hay sitio</li>
+							<li>Precio del dólar</li>
+							<li>Pensión 65</li>
+						</ul>
+					</div>
+					<div class="col-md-3 lista-footer">
+						<ul>
+							<li>Roger Federer</li>
+							<li>The Walking Dead</li>
+							<li>Twitter</li>
+							<li>Alianza Lima</li>
+							<li>Bayern Múnich</li>
+							<li>Pablo Escobar</li>
+							<li>Barack Obama</li>
+							<li>BBVA</li>
+							<li>XBOX</li>
+							<li>Batman</li>
+							<li>Banco de la Nación</li>
+							<li>Universidad Cesar</li>
+							<li>Universidad San Martín</li>
+							<li>BCP</li>
+							<li>Alejandro Toledo</li>
+							<li>Spiderman</li>
+							<li>YouTube</li>
+							<li>Sunat</li>
+							<li>Al fondo hay sitio</li>
+							<li>Precio del dólar</li>
+							<li>Pensión 65</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<hr>
+			<div class="container">
+				<div class="row">
+					<div class="lista-diarios">
+						<ul>
+							<li><span class="sep">Diarios del PAL: Clarín</span></li>
+							<li><span class="sep">La Tercera</span></li>
+							<li><span class="sep">El Universal Colombia</span></li>
+							<li><span class="sep">El Universal Venezuela</span></li>
+							<li><span class="sep">Vanguardia</span></li>
+							<li><span class="sep">La Prensa</span></li>
+							<li><span class="sep">El Salvador</span></li>
+							<li><span class="sep">La Verdad</span></li>
+							<li><span class="sep">Diario Libre</span></li> 
+							<li><span class="sep">El diario de hoy  El </span></li>
+							<li>Colombiano</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</div>
+	</footer>
 </div>
-	
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<script type="text/javascript" src="js/bootstrap.js"></script>
-	<script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
 	<script src="js/slick.min.js"></script>
 	<script type="text/javascript">
 		$('.multiple-items').slick({
@@ -716,7 +854,8 @@
 			infinite: true,
 			slidesToShow: 9,
 			slidesToScroll: 1,
-			variableWidth:true
+			variableWidth:true,
+			centerMode:true
 		});
 	</script>
 	<script type="text/javascript">
