--- a/index.html
+++ b/index.html
@@ -1506,7 +1506,7 @@
 			slidesToShow: 9,
 			slidesToScroll: 1,
 			variableWidth:true,
-			centerMode:true
+			autoplay:true
 		});
 	</script>
 	<script type="text/javascript">
